--- a/level21/cw/cw.html
+++ b/level21/cw/cw.html
@@ -1,16 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Tiny Text</title>
-  <style>
-    .tiny {
-      font-size: 8px; /* Adjust size as needed */
-    }
-  </style>
+    <style>
+        h1 {
+            color: blue;
+            font-size: 50px;
+            text-align: center;
+            border: 10px solid green;
+        }
+
+        p {
+            color: red;
+            font-size: 22px;
+            font-weight: 800;
+            text-align: right;
+            border: 5px dashed green;
+            padding: 10px;
+        }
+
+        button {
+            color: lightblue;
+            font-size: 30px;
+            font-weight: 900;
+            border: 2px double black;
+            background: none;
+            padding: 10px 20px;
+            cursor: pointer;
+        }
+    </style>
 </head>
 <body>
-
-  <p class="tiny">This is some very small text.</p>
-
+    <h1>სათაური</h1>
+    <p>ეს არის წითელი პარაგრაფი.</p>
+    <button>ღილაკი</button>
 </body>
 </html>
